fixed right gap

--- a/css/style.css
+++ b/css/style.css
@@ -1693,13 +1693,6 @@ h6 {
   font-size: 16px;
 }
 
-#site-footer .footer-bottom{
-  justify-content:center;
-  align-items:center;
-  position:relative;
-  left:127px;
- }
-
 
 /***********************************************************
   17. Libraries
